# onebitnative

./: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  onebit_jni.cpp
app/src/main/java/ai/onebit/nativeapp/: MainActivity.kt  OneBitNativeBridge.kt
app/src/main/res/values/: themes.xml
